8374545: Drop logic for unchecked nullness conversions
Reviewed-by: vromero